--- a/IO_2_Classical_Logic_Gates_with_Quantum_Circuits.ipynb
+++ b/IO_2_Classical_Logic_Gates_with_Quantum_Circuits.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -213,9 +213,8 @@
     "    \n",
     "    # YOUR QUANTUM PROGRAM GOES HERE\n",
     "    \n",
-    "    if input1 == '1':\n",
+    "    if input1 == '1' and input2 == '1':\n",
     "        qc.x(q[0])\n",
-    "    if input2 == '1':\n",
     "        qc.x(q[1])\n",
     "    \n",
     "    qc.ccx(q[0], q[1], q[2])\n",
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
